# corona-network-standard

./: README.md  agentic-sessions.md  example-network-data.ttl  main.py  pyproject.toml
.github/workflows/: python-test.yml
src/corona_network_standard/: examples.py  main.py  models.py  utils.py
src/corona_network_standard/data/ontology/: network-ontology.ttl
src/corona_network_standard/data/shapes/: network-shapes.ttl
tests/: test_models.py  test_validation.py
